[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worktree-mux"
version = "0.2.0"
description = "A tmux-based viewer for git worktrees"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Peiqi Wang" },
]
keywords = ["git", "worktree", "tmux", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/tt6746690/worktree-mux"
Repository = "https://github.com/tt6746690/worktree-mux"
Issues = "https://github.com/tt6746690/worktree-mux/issues"

[project.scripts]
worktree-mux = "worktree_mux.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "ruff",
]
types = [
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["worktree_mux"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
